@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-06T08:15:01Z",
+  "timestamp" : "2022-07-07T01:06:41Z",
   "count_outdated" : 377,
   "uniques_outdated" : 204,
-  "count" : 403,
+  "count" : 404,
   "uniques" : 219,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
