@@ -1,3 +1,10 @@
+2022-07-07T01:06:41Z:
+* notice: last 14d: unq all: 2 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 204 377 / 219 403
+* notice: next accum: outdated-unq outdated-all / unq all: 204 377 / 219 404
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-06]
+
 2022-07-06T08:15:01Z:
 * notice: last 14d: unq all: 2 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 204 377 / 218 402
